# gazebo_face_imitate

./: .gitignore
face_imitation/: CMakeLists.txt  package.xml
face_imitation/scripts/: DrEmpower_CyberGear.py  face_imitate.py  smooth_yzx.txt
head_sim/: CMakeLists.txt  package.xml
head_sim/config/: cfg1.rviz  joint_names_head_yaw_and_pitch.yaml
head_sim/launch/: display.launch  display_.launch  gazebo.launch  gazebo_.launch
head_sim/meshes/: base_link.STL  eye_component_1.STL  eye_component_2.STL  eye_white_ball.STL  eyelid.STL  link_head.STL  link_pitch.STL
head_sim/scripts/: set_initial_sim_state.py
head_sim/urdf/: eye_left.urdf  eye_right.urdf  eyelid_left.urdf  eyelid_right.urdf  head_yaw_and_pitch.csv  head_yaw_and_pitch.urdf
